fix z-index on app

--- a/src/component/PopinFixed/PopinFixed.styl
+++ b/src/component/PopinFixed/PopinFixed.styl
@@ -8,7 +8,7 @@
   height 100%
   background-color lightGrey
   box-shadow shadow-page
-  z-index 1
+  z-index 4
   &.visible
     visibility visible
   &__header
